[project]
name = "nanodes"
description = "Nodes for data processing pipelines"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Simon Pezold", email = "simon.pezold@unibas.ch" }
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "nanodes.__version__"}
